// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/result/demo/403.md correctly 1`] = `
<div
  class="m-design-result m-design-result-403"
>
  <div
    class="m-design-result-icon m-design-result-image"
  >
    <svg
      viewBox="0 0 251 294"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M0 129.023v-2.084C0 58.364 55.591 2.774 124.165 2.774h2.085c68.574 0 124.165 55.59 124.165 124.165v2.084c0 68.575-55.59 124.166-124.165 124.166h-2.085C55.591 253.189 0 197.598 0 129.023"
          fill="#E4EBF7"
        />
        <path
          d="M41.417 132.92a8.231 8.231 0 1 1-16.38-1.65 8.231 8.231 0 0 1 16.38 1.65"
          fill="#FFF"
        />
        <path
          d="M38.652 136.36l10.425 5.91M49.989 148.505l-12.58 10.73"
          stroke="#FFF"
          stroke-width="2"
        />
        <path
          d="M41.536 161.28a5.636 5.636 0 1 1-11.216-1.13 5.636 5.636 0 0 1 11.216 1.13M59.154 145.261a5.677 5.677 0 1 1-11.297-1.138 5.677 5.677 0 0 1 11.297 1.138M100.36 29.516l29.66-.013a4.562 4.562 0 1 0-.004-9.126l-29.66.013a4.563 4.563 0 0 0 .005 9.126M111.705 47.754l29.659-.013a4.563 4.563 0 1 0-.004-9.126l-29.66.013a4.563 4.563 0 1 0 .005 9.126"
          fill="#FFF"
        />
        <path
          d="M114.066 29.503V29.5l15.698-.007a4.563 4.563 0 1 0 .004 9.126l-15.698.007v-.002a4.562 4.562 0 0 0-.004-9.122M185.405 137.723c-.55 5.455-5.418 9.432-10.873 8.882-5.456-.55-9.432-5.418-8.882-10.873.55-5.455 5.418-9.432 10.873-8.882 5.455.55 9.432 5.418 8.882 10.873"
          fill="#FFF"
        />
        <path
          d="M180.17 143.772l12.572 7.129M193.841 158.42L178.67 171.36"
          stroke="#FFF"
          stroke-width="2"
        />
        <path
          d="M185.55 171.926a6.798 6.798 0 1 1-13.528-1.363 6.798 6.798 0 0 1 13.527 1.363M204.12 155.285a6.848 6.848 0 1 1-13.627-1.375 6.848 6.848 0 0 1 13.626 1.375"
          fill="#FFF"
        />
        <path
          d="M152.988 194.074a2.21 2.21 0 1 1-4.42 0 2.21 2.21 0 0 1 4.42 0zM225.931 118.217a2.21 2.21 0 1 1-4.421 0 2.21 2.21 0 0 1 4.421 0zM217.09 153.051a2.21 2.21 0 1 1-4.421 0 2.21 2.21 0 0 1 4.42 0zM177.84 109.842a2.21 2.21 0 1 1-4.422 0 2.21 2.21 0 0 1 4.421 0zM196.114 94.454a2.21 2.21 0 1 1-4.421 0 2.21 2.21 0 0 1 4.421 0zM202.844 182.523a2.21 2.21 0 1 1-4.42 0 2.21 2.21 0 0 1 4.42 0z"
          stroke="#FFF"
          stroke-width="2"
        />
        <path
          d="M215.125 155.262l-1.902 20.075-10.87 5.958M174.601 176.636l-6.322 9.761H156.98l-4.484 6.449M175.874 127.28V111.56M221.51 119.404l-12.77 7.859-15.228-7.86V96.668"
          stroke="#FFF"
          stroke-width="2"
        />
        <path
          d="M180.68 29.32C180.68 13.128 193.806 0 210 0c16.193 0 29.32 13.127 29.32 29.32 0 16.194-13.127 29.322-29.32 29.322-16.193 0-29.32-13.128-29.32-29.321"
          fill="#A26EF4"
        />
        <path
          d="M221.45 41.706l-21.563-.125a1.744 1.744 0 0 1-1.734-1.754l.071-12.23a1.744 1.744 0 0 1 1.754-1.734l21.562.125c.964.006 1.74.791 1.735 1.755l-.071 12.229a1.744 1.744 0 0 1-1.754 1.734"
          fill="#FFF"
        />
        <path
          d="M215.106 29.192c-.015 2.577-2.049 4.654-4.543 4.64-2.494-.014-4.504-2.115-4.489-4.693l.04-6.925c.016-2.577 2.05-4.654 4.543-4.64 2.494.015 4.504 2.116 4.49 4.693l-.04 6.925zm-4.53-14.074a6.877 6.877 0 0 0-6.916 6.837l-.043 7.368a6.877 6.877 0 0 0 13.754.08l.042-7.368a6.878 6.878 0 0 0-6.837-6.917zM167.566 68.367h-3.93a4.73 4.73 0 0 1-4.717-4.717 4.73 4.73 0 0 1 4.717-4.717h3.93a4.73 4.73 0 0 1 4.717 4.717 4.73 4.73 0 0 1-4.717 4.717"
          fill="#FFF"
        />
        <path
          d="M168.214 248.838a6.611 6.611 0 0 1-6.61-6.611v-66.108a6.611 6.611 0 0 1 13.221 0v66.108a6.611 6.611 0 0 1-6.61 6.61"
          fill="#5BA02E"
        />
        <path
          d="M176.147 248.176a6.611 6.611 0 0 1-6.61-6.61v-33.054a6.611 6.611 0 1 1 13.221 0v33.053a6.611 6.611 0 0 1-6.61 6.611"
          fill="#92C110"
        />
        <path
          d="M185.994 293.89h-27.376a3.17 3.17 0 0 1-3.17-3.17v-45.887a3.17 3.17 0 0 1 3.17-3.17h27.376a3.17 3.17 0 0 1 3.17 3.17v45.886a3.17 3.17 0 0 1-3.17 3.17"
          fill="#F2D7AD"
        />
        <path
          d="M81.972 147.673s6.377-.927 17.566-1.28c11.729-.371 17.57 1.086 17.57 1.086s3.697-3.855.968-8.424c1.278-12.077 5.982-32.827.335-48.273-1.116-1.339-3.743-1.512-7.536-.62-1.337.315-7.147-.149-7.983-.1l-15.311-.347s-3.487-.17-8.035-.508c-1.512-.113-4.227-1.683-5.458-.338-.406.443-2.425 5.669-1.97 16.077l8.635 35.642s-3.141 3.61 1.219 7.085"
          fill="#FFF"
        />
        <path
          d="M75.768 73.325l-.9-6.397 11.982-6.52s7.302-.118 8.038 1.205c.737 1.324-5.616.993-5.616.993s-1.836 1.388-2.615 2.5c-1.654 2.363-.986 6.471-8.318 5.986-1.708.284-2.57 2.233-2.57 2.233"
          fill="#FFC6A0"
        />
        <path
          d="M52.44 77.672s14.217 9.406 24.973 14.444c1.061.497-2.094 16.183-11.892 11.811-7.436-3.318-20.162-8.44-21.482-14.496-.71-3.258 2.543-7.643 8.401-11.76M141.862 80.113s-6.693 2.999-13.844 6.876c-3.894 2.11-10.137 4.704-12.33 7.988-6.224 9.314 3.536 11.22 12.947 7.503 6.71-2.651 28.999-12.127 13.227-22.367"
          fill="#FFB594"
        />
        <path
          d="M76.166 66.36l3.06 3.881s-2.783 2.67-6.31 5.747c-7.103 6.195-12.803 14.296-15.995 16.44-3.966 2.662-9.754 3.314-12.177-.118-3.553-5.032.464-14.628 31.422-25.95"
          fill="#FFC6A0"
        />
        <path
          d="M64.674 85.116s-2.34 8.413-8.912 14.447c.652.548 18.586 10.51 22.144 10.056 5.238-.669 6.417-18.968 1.145-20.531-.702-.208-5.901-1.286-8.853-2.167-.87-.26-1.611-1.71-3.545-.936l-1.98-.869zM128.362 85.826s5.318 1.956 7.325 13.734c-.546.274-17.55 12.35-21.829 7.805-6.534-6.94-.766-17.393 4.275-18.61 4.646-1.121 5.03-1.37 10.23-2.929"
          fill="#FFF"
        />
        <path
          d="M78.18 94.656s.911 7.41-4.914 13.078"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M87.397 94.68s3.124 2.572 10.263 2.572c7.14 0 9.074-3.437 9.074-3.437"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".932"
        />
        <path
          d="M117.184 68.639l-6.781-6.177s-5.355-4.314-9.223-.893c-3.867 3.422 4.463 2.083 5.653 4.165 1.19 2.082.848 1.143-2.083.446-5.603-1.331-2.082.893 2.975 5.355 2.091 1.845 6.992.955 6.992.955l2.467-3.851z"
          fill="#FFC6A0"
        />
        <path
          d="M105.282 91.315l-.297-10.937-15.918-.027-.53 10.45c-.026.403.17.788.515.999 2.049 1.251 9.387 5.093 15.799.424.287-.21.443-.554.431-.91"
          fill="#FFB594"
        />
        <path
          d="M107.573 74.24c.817-1.147.982-9.118 1.015-11.928a1.046 1.046 0 0 0-.965-1.055l-4.62-.365c-7.71-1.044-17.071.624-18.253 6.346-5.482 5.813-.421 13.244-.421 13.244s1.963 3.566 4.305 6.791c.756 1.041.398-3.731 3.04-5.929 5.524-4.594 15.899-7.103 15.899-7.103"
          fill="#5C2552"
        />
        <path
          d="M88.426 83.206s2.685 6.202 11.602 6.522c7.82.28 8.973-7.008 7.434-17.505l-.909-5.483c-6.118-2.897-15.478.54-15.478.54s-.576 2.044-.19 5.504c-2.276 2.066-1.824 5.618-1.824 5.618s-.905-1.922-1.98-2.321c-.86-.32-1.897.089-2.322 1.98-1.04 4.632 3.667 5.145 3.667 5.145"
          fill="#FFC6A0"
        />
        <path
          d="M100.843 77.099l1.701-.928-1.015-4.324.674-1.406"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.145"
        />
        <path
          d="M105.546 74.092c-.022.713-.452 1.279-.96 1.263-.51-.016-.904-.607-.882-1.32.021-.713.452-1.278.96-1.263.51.016.904.607.882 1.32M97.592 74.349c-.022.713-.452 1.278-.961 1.263-.509-.016-.904-.607-.882-1.32.022-.713.452-1.279.961-1.263.51.016.904.606.882 1.32"
          fill="#552950"
        />
        <path
          d="M91.132 86.786s5.269 4.957 12.679 2.327"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.145"
        />
        <path
          d="M99.776 81.903s-3.592.232-1.44-2.79c1.59-1.496 4.897-.46 4.897-.46s1.156 3.906-3.457 3.25"
          fill="#DB836E"
        />
        <path
          d="M102.88 70.6s2.483.84 3.402.715M93.883 71.975s2.492-1.144 4.778-1.073"
          stroke="#5C2552"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.526"
        />
        <path
          d="M86.32 77.374s.961.879 1.458 2.106c-.377.48-1.033 1.152-.236 1.809M99.337 83.719s1.911.151 2.509-.254"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.145"
        />
        <path
          d="M87.782 115.821l15.73-3.012M100.165 115.821l10.04-2.008"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M66.508 86.763s-1.598 8.83-6.697 14.078"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.114"
        />
        <path
          d="M128.31 87.934s3.013 4.121 4.06 11.785"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M64.09 84.816s-6.03 9.912-13.607 9.903"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".795"
        />
        <path
          d="M112.366 65.909l-.142 5.32s5.993 4.472 11.945 9.202c4.482 3.562 8.888 7.455 10.985 8.662 4.804 2.766 8.9 3.355 11.076 1.808 4.071-2.894 4.373-9.878-8.136-15.263-4.271-1.838-16.144-6.36-25.728-9.73"
          fill="#FFC6A0"
        />
        <path
          d="M130.532 85.488s4.588 5.757 11.619 6.214"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".75"
        />
        <path
          d="M121.708 105.73s-.393 8.564-1.34 13.612"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M115.784 161.512s-3.57-1.488-2.678-7.14"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M101.52 290.246s4.326 2.057 7.408 1.03c2.842-.948 4.564.673 7.132 1.186 2.57.514 6.925 1.108 11.772-1.269-.104-5.551-6.939-4.01-12.048-6.763-2.582-1.39-3.812-4.757-3.625-8.863h-9.471s-1.402 10.596-1.169 14.68"
          fill="#CBD1D1"
        />
        <path
          d="M101.496 290.073s2.447 1.281 6.809.658c3.081-.44 3.74.485 7.479 1.039 3.739.554 10.802-.07 11.91-.9.415 1.108-.347 2.077-.347 2.077s-1.523.608-4.847.831c-2.045.137-5.843.293-7.663-.507-1.8-1.385-5.286-1.917-5.77-.243-3.947.958-7.41-.288-7.41-.288l-.16-2.667z"
          fill="#2B0849"
        />
        <path
          d="M108.824 276.19h3.116s-.103 6.751 4.57 8.62c-4.673.624-8.62-2.32-7.686-8.62"
          fill="#A4AABA"
        />
        <path
          d="M57.65 272.52s-2.122 7.47-4.518 12.396c-1.811 3.724-4.255 7.548 5.505 7.548 6.698 0 9.02-.483 7.479-6.648-1.541-6.164.268-13.296.268-13.296H57.65z"
          fill="#CBD1D1"
        />
        <path
          d="M51.54 290.04s2.111 1.178 6.682 1.178c6.128 0 8.31-1.662 8.31-1.662s.605 1.122-.624 2.18c-1 .862-3.624 1.603-7.444 1.559-4.177-.049-5.876-.57-6.786-1.177-.831-.554-.692-1.593-.138-2.078"
          fill="#2B0849"
        />
        <path
          d="M58.533 274.438s.034 1.529-.315 2.95c-.352 1.431-1.087 3.127-1.139 4.17-.058 1.16 4.57 1.592 5.194.035.623-1.559 1.303-6.475 1.927-7.306.622-.831-4.94-2.135-5.667.15"
          fill="#A4AABA"
        />
        <path
          d="M100.885 277.015l13.306.092s1.291-54.228 1.843-64.056c.552-9.828 3.756-43.13.997-62.788l-12.48-.64-22.725.776s-.433 3.944-1.19 9.921c-.062.493-.677.838-.744 1.358-.075.582.42 1.347.318 1.956-2.35 14.003-6.343 32.926-8.697 46.425-.116.663-1.227 1.004-1.45 2.677-.04.3.21 1.516.112 1.785-6.836 18.643-10.89 47.584-14.2 61.551l14.528-.014s2.185-8.524 4.008-16.878c2.796-12.817 22.987-84.553 22.987-84.553l3-.517 1.037 46.1s-.223 1.228.334 2.008c.558.782-.556 1.117-.39 2.233l.39 1.784s-.446 7.14-.892 11.826c-.446 4.685-.092 38.954-.092 38.954"
          fill="#7BB2F9"
        />
        <path
          d="M77.438 220.434c1.146.094 4.016-2.008 6.916-4.91M107.55 223.931s2.758-1.103 6.069-3.862"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M108.459 220.905s2.759-1.104 6.07-3.863"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M76.099 223.557s2.608-.587 6.47-3.346M87.33 150.82c-.27 3.088.297 8.478-4.315 9.073M104.829 149.075s.11 13.936-1.286 14.983c-2.207 1.655-2.975 1.934-2.975 1.934M101.014 149.63s.035 12.81-1.19 24.245M94.93 174.965s7.174-1.655 9.38-1.655M75.671 204.754c-.316 1.55-.64 3.067-.973 4.535 0 0-1.45 1.822-1.003 3.756.446 1.934-.943 2.034-4.96 15.273-1.686 5.559-4.464 18.49-6.313 27.447-.078.38-4.018 18.06-4.093 18.423M77.043 196.743a313.269 313.269 0 0 1-.877 4.729M83.908 151.414l-1.19 10.413s-1.091.148-.496 2.23c.111 1.34-2.66 15.692-5.153 30.267M57.58 272.94h13.238"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
        <path
          d="M117.377 147.423s-16.955-3.087-35.7.199c.157 2.501-.002 4.128-.002 4.128s14.607-2.802 35.476-.31c.251-2.342.226-4.017.226-4.017"
          fill="#192064"
        />
        <path
          d="M107.511 150.353l.004-4.885a.807.807 0 0 0-.774-.81c-2.428-.092-5.04-.108-7.795-.014a.814.814 0 0 0-.784.81l-.003 4.88c0 .456.371.82.827.808a140.76 140.76 0 0 1 7.688.017.81.81 0 0 0 .837-.806"
          fill="#FFF"
        />
        <path
          d="M106.402 149.426l.002-3.06a.64.64 0 0 0-.616-.643 94.135 94.135 0 0 0-5.834-.009.647.647 0 0 0-.626.643l-.001 3.056c0 .36.291.648.651.64 1.78-.04 3.708-.041 5.762.012.36.009.662-.279.662-.64"
          fill="#192064"
        />
        <path
          d="M101.485 273.933h12.272M102.652 269.075c.006 3.368.04 5.759.11 6.47M102.667 263.125c-.009 1.53-.015 2.98-.016 4.313M102.204 174.024l.893 44.402s.669 1.561-.224 2.677c-.892 1.116 2.455.67.893 2.231-1.562 1.562.893 1.116 0 3.347-.592 1.48-.988 20.987-1.09 34.956"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.051"
        />
      </g>
    </svg>
  </div>
  <div
    class="m-design-result-title"
  >
    403
  </div>
  <div
    class="m-design-result-subtitle"
  >
    Sorry, you are not authorized to access this page.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Back Home
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/404.md correctly 1`] = `
<div
  class="m-design-result m-design-result-404"
>
  <div
    class="m-design-result-icon m-design-result-image"
  >
    <svg
      version="1.1"
      viewBox="0 0 120 108"
    >
      <defs>
        <linearGradient
          id="linearGradient-1"
          x1="50.0000924%"
          x2="50.0000924%"
          y1="-0.000286914108%"
          y2="99.9992697%"
        >
          <stop
            offset="4.528621e-05%"
            stop-color="#D0DDF8"
          />
          <stop
            offset="100%"
            stop-color="#FFFFFF"
            stop-opacity="0"
          />
        </linearGradient>
        <linearGradient
          id="linearGradient-2"
          x1="50.0000539%"
          x2="50.0000539%"
          y1="0.000766784051%"
          y2="100.000767%"
        >
          <stop
            offset="4.528621e-05%"
            stop-color="#D0DDF8"
          />
          <stop
            offset="100%"
            stop-color="#FFFFFF"
          />
        </linearGradient>
        <linearGradient
          id="linearGradient-3"
          x1="50%"
          x2="50%"
          y1="81.3853149%"
          y2="-5.98948422e-13%"
        >
          <stop
            offset="0%"
            stop-color="#BED8FB"
          />
          <stop
            offset="100%"
            stop-color="#9DB9E0"
          />
        </linearGradient>
        <linearGradient
          id="linearGradient-4"
          x1="75.2256832%"
          x2="39.0637779%"
          y1="8.86694627%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#BBCEF8"
          />
          <stop
            offset="100%"
            stop-color="#6392F8"
          />
        </linearGradient>
        <linearGradient
          id="linearGradient-5"
          x1="87.3030202%"
          x2="39.0637779%"
          y1="47.7974549%"
          y2="53.7442861%"
        >
          <stop
            offset="0%"
            stop-color="#C5D5F8"
          />
          <stop
            offset="100%"
            stop-color="#6391F8"
          />
        </linearGradient>
      </defs>
      <g
        fill="none"
        fill-rule="evenodd"
        id="V1.1"
        stroke="none"
        stroke-width="1"
      >
        <g
          id="Result---结果页"
          transform="translate(95.500000, 34.500000) scale(1, -1) translate(-95.500000, -34.500000) translate(-1514.000000, -1007.000000)"
        >
          <g
            id="缺省页-暂无内容-0备份-4"
            transform="translate(1574.000000, 1021.210526) scale(1, -1) translate(-1574.000000, -1021.210526) translate(1514.000000, 967.000000)"
          >
            <rect
              fill="#6A9CD8"
              fill-rule="nonzero"
              height="107.368421"
              id="矩形"
              opacity="0.01"
              width="118.947368"
              x="0"
              y="1.05263158"
            />
            <path
              d="M94.7368421,8.21774173 L94.7368421,62.1052632 L25.2631579,62.1052632 C25.378664,35.3072932 25.4861488,31.1862732 25.6032591,4.37858385 L41.1628874,4.37858385 C41.1917639,9.15890237 41.1917639,11.2356114 41.1628874,11.3133665 L41.1628874,11.3230859 C41.1628874,11.3230859 41.1821384,11.3133665 41.1917639,11.3036471 L41.1917639,11.2744889 C41.1917639,9.86355793 42.3163437,8.72800954 43.7136461,8.72800954 C45.1109485,8.72800954 46.2355283,9.86355793 46.2355283,11.2744889 L46.2355283,12.7826138 L57.351382,12.7826138 L57.351382,0 L67.3234048,0 L67.3234048,18.424718 C67.3137793,18.4635955 67.3137793,18.4927537 67.3137793,18.5332511 L67.3137793,24.7326002 C67.3137793,25.6429828 68.0405049,26.3784164 68.9436981,26.3784164 C69.8356615,26.3784164 70.5639914,25.6446027 70.5639914,24.7326002 L70.5639914,19.9020648 C73.6970931,19.8923454 75.967108,19.882626 77.470291,19.882626 C78.973474,19.882626 79.7114293,19.8923454 79.7788078,19.9020648 C80.0210497,19.8729067 79.7788078,16.1601008 79.7788078,16.1601008 L84.5225774,16.1601008 L84.5225774,20.5581234 C84.5225774,21.2239015 85.0567929,21.7633274 85.71614,21.7633274 C86.375487,21.7633274 86.9097026,21.2239015 86.9097026,20.5581234 L86.9097026,8.21612183 L94.7368421,8.21612183 L94.7368421,8.21774173 Z"
              fill="url(#linearGradient-1)"
              fill-rule="nonzero"
              id="路径"
            />
            <ellipse
              cx="60.5263158"
              cy="80"
              fill="url(#linearGradient-2)"
              fill-rule="nonzero"
              id="椭圆形"
              rx="59.4736842"
              ry="28.4210526"
            />
            <ellipse
              cx="62.5788462"
              cy="74.4559241"
              fill="url(#linearGradient-3)"
              fill-rule="nonzero"
              id="椭圆形"
              rx="27.2130172"
              ry="6"
            />
            <g
              fill="#7AA1F8"
              fill-rule="nonzero"
              id="编组"
              opacity="0.6"
              transform="translate(13.759936, 1.054243)"
            >
              <g
                id="形状"
                transform="translate(15.570354, 0.000000)"
              >
                <path
                  d="M1.87701396,3.75402793 C0.84264232,3.75402793 0,2.91299678 0,1.87701396 C0,0.841031149 0.841031149,0 1.87701396,0 C2.91299678,0 3.75402793,0.841031149 3.75402793,1.87701396 C3.75402793,2.91299678 2.91299678,3.75402793 1.87701396,3.75402793 Z M1.87701396,1.04403867 C1.41783029,1.04403867 1.04403867,1.41783029 1.04403867,1.87701396 C1.04403867,2.33619764 1.41783029,2.70998926 1.87701396,2.70998926 C2.33619764,2.70998926 2.70998926,2.33619764 2.70998926,1.87701396 C2.70998926,1.41783029 2.33619764,1.04403867 1.87701396,1.04403867 Z"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(15.754028, 29.732546)"
              >
                <circle
                  cx="1.35499463"
                  cy="1.35499463"
                  r="1.35499463"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(76.538131, 45.296455)"
              >
                <circle
                  cx="2.83888292"
                  cy="2.83888292"
                  r="2.83888292"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(65.724490, 17.751880)"
              >
                <circle
                  cx="1.11976369"
                  cy="1.11976369"
                  r="1.11976369"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(82.019871, 9.038668)"
              >
                <circle
                  cx="0.9650913"
                  cy="0.9650913"
                  r="1"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(91.973684, 30.605800)"
              >
                <circle
                  cx="1.33404941"
                  cy="1.33404941"
                  r="1.33404941"
                />
              </g>
              <g
                id="椭圆形"
                transform="translate(73.008593, 68.463480)"
              >
                <circle
                  cx="1.26154672"
                  cy="1.26154672"
                  r="1.26154672"
                />
              </g>
              <g
                id="形状"
                transform="translate(54.642857, 1.353383)"
              >
                <path
                  d="M1.87701396,3.75402793 C0.84264232,3.75402793 0,2.91299678 0,1.87701396 C0,0.841031149 0.841031149,0 1.87701396,0 C2.91299678,0 3.75402793,0.841031149 3.75402793,1.87701396 C3.75402793,2.91299678 2.91138561,3.75402793 1.87701396,3.75402793 Z M1.87701396,1.04564984 C1.41783029,1.04564984 1.04403867,1.41944146 1.04403867,1.87862513 C1.04403867,2.33780881 1.41783029,2.71160043 1.87701396,2.71160043 C2.33619764,2.71160043 2.70998926,2.33780881 2.70998926,1.87862513 C2.70998926,1.41944146 2.33619764,1.04564984 1.87701396,1.04564984 Z"
                />
              </g>
              <g
                id="形状"
                transform="translate(35.927497, 75.107948)"
              >
                <path
                  d="M1.87701396,3.75402793 C0.84264232,3.75402793 0,2.91299678 0,1.87701396 C0,0.841031149 0.841031149,5.60954791e-15 1.87701396,5.60954791e-15 C2.91299678,5.60954791e-15 3.75402793,0.841031149 3.75402793,1.87701396 C3.75402793,2.91299678 2.91138561,3.75402793 1.87701396,3.75402793 Z M1.87701396,1.04403867 C1.41783029,1.04403867 1.04403867,1.41783029 1.04403867,1.87701396 C1.04403867,2.33619764 1.41783029,2.70998926 1.87701396,2.70998926 C2.33619764,2.70998926 2.70998926,2.33619764 2.70998926,1.87701396 C2.70998926,1.41783029 2.33619764,1.04403867 1.87701396,1.04403867 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(0.000000, 46.649839)"
              >
                <path
                  d="M4.19387755,1.14393126 L0.571965628,1.14393126 C0.256176155,1.14393126 0,0.887755102 0,0.571965628 L0,0.571965628 C0,0.256176155 0.256176155,3.73969861e-15 0.571965628,3.73969861e-15 L4.19387755,3.73969861e-15 C4.50966702,3.73969861e-15 4.76584318,0.256176155 4.76584318,0.571965628 L4.76584318,0.571965628 C4.76584318,0.887755102 4.50966702,1.14393126 4.19387755,1.14393126 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(1.788400, 44.838883)"
              >
                <path
                  d="M0,4.17132116 L0,0.594522019 C0,0.265843179 0.265843179,-3.73969861e-15 0.594522019,-3.73969861e-15 L0.594522019,-3.73969861e-15 C0.923200859,-3.73969861e-15 1.18904404,0.265843179 1.18904404,0.594522019 L1.18904404,4.17132116 C1.18904404,4.5 0.923200859,4.76584318 0.594522019,4.76584318 L0.594522019,4.76584318 C0.265843179,4.76584318 0,4.5 0,4.17132116 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(1.483888, 22.709166)"
              >
                <path
                  d="M2.72287863,1 L0.37056928,1 C0.165950591,1 0,0.776086957 0,0.5 L0,0.5 C0,0.223913043 0.165950591,9.26794873e-15 0.37056928,9.26794873e-15 L2.72287863,9.26794873e-15 C2.92749731,9.26794873e-15 3.09344791,0.223913043 3.09344791,0.5 L3.09344791,0.5 C3.09344791,0.776086957 2.92749731,1 2.72287863,1 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(2.656534, 21.518797)"
              >
                <path
                  d="M0,2.70837809 L0,0.386680988 C0,0.174006445 0.222916667,0 0.5,0 L0.5,0 C0.775,0 1,0.172395274 1,0.386680988 L1,2.70837809 C1,2.92105263 0.777083333,3.09505908 0.5,3.09505908 L0.5,3.09505908 C0.225,3.09505908 0,2.9226638 0,2.70837809 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(31.777121, 10.636950)"
              >
                <path
                  d="M3.22395274,5.71965628 C2.14930183,4.15843179 1.07465091,2.59881847 0,1.03759398 C0.182062299,0.691192266 0.364124597,0.344790548 0.546186896,0 C1.34693878,0.0418904404 2.14930183,0.0853920516 2.95005371,0.127282492 C3.04189044,1.99140709 3.132116,3.85553169 3.22395274,5.71965628 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(29.059076, 14.059076)"
              >
                <path
                  d="M4.7481203,3.00644468 C3.25778733,2.73254565 1.76906552,2.45703545 0.278732546,2.18313641 C0.186895811,1.88506982 0.0934479055,1.58539205 0,1.28732546 C0.476906552,0.858754028 0.953813104,0.428571429 1.43071966,0 C2.53759398,1.00214823 3.64285714,2.00429646 4.7481203,3.00644468 Z"
                />
              </g>
              <g
                id="路径"
                transform="translate(35.740602, 11.279807)"
              >
                <path
                  d="M0,4.33566058 C0.111170784,2.99838883 0.223952739,1.66111708 0.335123523,0.323845328 C0.589688507,0.215896885 0.845864662,0.107948443 1.10042965,0 C1.52094522,0.383458647 1.93984962,0.766917293 2.3603652,1.14876477 C1.57411386,2.21052632 0.786251343,3.27228786 0,4.33566058 Z"
                />
              </g>
            </g>
            <g
              id="编组-3"
              transform="translate(29.789439, 24.421053)"
            >
              <path
                d="M52.1727028,22.0227762 C51.8402764,33.5480786 42.390881,42.7890727 30.7826781,42.7890727 C22.1267859,42.7890727 14.6712429,37.6508562 11.3009777,30.25874 C16.3573905,31.5248913 23.9129736,31.3696346 32.1425985,29.7699576 C40.6474984,28.1167725 47.9070365,25.3029273 52.063821,22.1067972 Z M30.7826781,0 C39.8290778,0 47.5643784,5.61229191 50.6953139,13.5443079 C50.7272418,13.7072767 50.7867168,13.8637901 50.870187,14.0074286 C51.357558,15.3269108 51.7171156,16.7089562 51.9353588,18.1374876 C51.099467,19.1256432 49.6365417,20.2610586 47.5703361,21.4035974 C43.5484936,23.6275346 37.8384671,25.5711705 31.5635274,26.7908952 C25.2885878,28.0106199 19.2662446,28.3475257 14.7041556,27.7921358 C12.7421285,27.5532781 11.1739575,27.1606763 10.0426967,26.6854399 C9.6124734,24.9935989 9.3836044,23.2207896 9.3836044,21.3945364 C9.3836044,9.5786602 18.9642961,0 30.7826781,0 Z"
                fill="url(#linearGradient-4)"
                id="形状结合"
              />
              <path
                d="M4.52737096,16.9084756 C2.27042539,18.3786844 0.982041779,20.1353632 0.982041779,22.1308468 C0.982041779,28.341627 13.9644824,32.546006 30,32.546006 C46.0355176,32.546006 59.0179582,28.341627 59.0179582,22.1308468 C59.0179582,20.3012962 57.928556,18.6654813 56.0073538,17.2753236 C55.3339269,16.7880405 54.3929856,16.9389398 53.9057024,17.6123666 C53.4184192,18.2857935 53.5693185,19.2267348 54.2427454,19.714018 C55.4557009,20.5916973 56.0077966,21.4207082 56.0077966,22.1308468 C56.0077966,23.6409419 53.5498604,25.5229105 48.9908307,26.9993578 C44.0252788,28.6074577 37.247621,29.5358444 30,29.5358444 C22.752379,29.5358444 15.9747212,28.6074577 11.0091693,26.9993578 C6.45013961,25.5229105 3.99220342,23.6409419 3.99220342,22.1308468 C3.99220342,21.3397154 4.68051959,20.4012135 6.17038258,19.430694 C6.86687397,18.9769889 7.06369113,18.0445704 6.60998599,17.348079 C6.15628086,16.6515876 5.22386235,16.4547704 4.52737096,16.9084756 Z"
                fill="url(#linearGradient-5)"
                id="路径"
                transform="translate(30.000000, 24.605168) rotate(-11.000000) translate(-30.000000, -24.605168) "
              />
              <circle
                cx="37.9096529"
                cy="8.15029956"
                fill="#E2EBFF"
                id="椭圆形"
                r="3.05636234"
              />
              <circle
                cx="17.533904"
                cy="15.2818117"
                fill="#E2EBFF"
                id="椭圆形备份-6"
                r="3.05636234"
              />
              <circle
                cx="24.1560224"
                cy="23.941505"
                fill="#E2EBFF"
                id="椭圆形备份-7"
                r="1.52818117"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
  <div
    class="m-design-result-title"
  >
    404
  </div>
  <div
    class="m-design-result-subtitle"
  >
    Sorry, the page you visited does not exist.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Back Home
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/500.md correctly 1`] = `
<div
  class="m-design-result m-design-result-500"
>
  <div
    class="m-design-result-icon m-design-result-image"
  >
    <svg
      viewBox="0 0 251 294"
    >
      <defs>
        <path
          d="M0 .335h253.49v253.49H0z"
        />
        <path
          d="M0 293.665h253.49V.401H0z"
        />
      </defs>
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <g
          transform="translate(0 .067)"
        >
          <mask
            fill="#fff"
          />
          <path
            d="M0 128.134v-2.11C0 56.608 56.273.334 125.69.334h2.11c69.416 0 125.69 56.274 125.69 125.69v2.11c0 69.417-56.274 125.69-125.69 125.69h-2.11C56.273 253.824 0 197.551 0 128.134"
            fill="#E4EBF7"
            mask="url(#b)"
          />
        </g>
        <path
          d="M39.989 132.108a8.332 8.332 0 1 1-16.581-1.671 8.332 8.332 0 0 1 16.58 1.671"
          fill="#FFF"
        />
        <path
          d="M37.19 135.59l10.553 5.983M48.665 147.884l-12.734 10.861"
          stroke="#FFF"
          stroke-width="2"
        />
        <path
          d="M40.11 160.816a5.706 5.706 0 1 1-11.354-1.145 5.706 5.706 0 0 1 11.354 1.145M57.943 144.6a5.747 5.747 0 1 1-11.436-1.152 5.747 5.747 0 0 1 11.436 1.153M99.656 27.434l30.024-.013a4.619 4.619 0 1 0-.004-9.238l-30.024.013a4.62 4.62 0 0 0 .004 9.238M111.14 45.896l30.023-.013a4.62 4.62 0 1 0-.004-9.238l-30.024.013a4.619 4.619 0 1 0 .004 9.238"
          fill="#FFF"
        />
        <path
          d="M113.53 27.421v-.002l15.89-.007a4.619 4.619 0 1 0 .005 9.238l-15.892.007v-.002a4.618 4.618 0 0 0-.004-9.234M150.167 70.091h-3.979a4.789 4.789 0 0 1-4.774-4.775 4.788 4.788 0 0 1 4.774-4.774h3.979a4.789 4.789 0 0 1 4.775 4.774 4.789 4.789 0 0 1-4.775 4.775"
          fill="#FFF"
        />
        <path
          d="M171.687 30.234c0-16.392 13.289-29.68 29.681-29.68 16.392 0 29.68 13.288 29.68 29.68 0 16.393-13.288 29.681-29.68 29.681s-29.68-13.288-29.68-29.68"
          fill="#FF603B"
        />
        <path
          d="M203.557 19.435l-.676 15.035a1.514 1.514 0 0 1-3.026 0l-.675-15.035a2.19 2.19 0 1 1 4.377 0m-.264 19.378c.513.477.77 1.1.77 1.87s-.257 1.393-.77 1.907c-.55.476-1.21.733-1.943.733a2.545 2.545 0 0 1-1.87-.77c-.55-.514-.806-1.136-.806-1.87 0-.77.256-1.393.806-1.87.513-.513 1.137-.733 1.87-.733.77 0 1.43.22 1.943.733"
          fill="#FFF"
        />
        <path
          d="M119.3 133.275c4.426-.598 3.612-1.204 4.079-4.778.675-5.18-3.108-16.935-8.262-25.118-1.088-10.72-12.598-11.24-12.598-11.24s4.312 4.895 4.196 16.199c1.398 5.243.804 14.45.804 14.45s5.255 11.369 11.78 10.487"
          fill="#FFB594"
        />
        <path
          d="M100.944 91.61s1.463-.583 3.211.582c8.08 1.398 10.368 6.706 11.3 11.368 1.864 1.282 1.864 2.33 1.864 3.496.365.777 1.515 3.03 1.515 3.03s-7.225 1.748-10.954 6.758c-1.399-6.41-6.936-25.235-6.936-25.235"
          fill="#FFF"
        />
        <path
          d="M94.008 90.5l1.019-5.815-9.23-11.874-5.233 5.581-2.593 9.863s8.39 5.128 16.037 2.246"
          fill="#FFB594"
        />
        <path
          d="M82.931 78.216s-4.557-2.868-2.445-6.892c1.632-3.107 4.537 1.139 4.537 1.139s.524-3.662 3.139-3.662c.523-1.046 1.569-4.184 1.569-4.184s11.507 2.615 13.6 3.138c-.001 5.23-2.317 19.529-7.884 19.969-8.94.706-12.516-9.508-12.516-9.508"
          fill="#FFC6A0"
        />
        <path
          d="M102.971 72.243c2.616-2.093 3.489-9.775 3.489-9.775s-2.492-.492-6.676-2.062c-4.708-2.092-12.867-4.771-17.575.982-9.54 4.41-2.062 19.93-2.062 19.93l2.729-3.037s-3.956-3.304-2.092-6.277c2.183-3.48 3.943 1.08 3.943 1.08s.64-2.4 3.6-3.36c.356-.714 1.04-2.69 1.44-3.872a1.08 1.08 0 0 1 1.27-.707c2.41.56 8.723 2.03 11.417 2.676.524.126.876.619.825 1.156l-.308 3.266z"
          fill="#520038"
        />
        <path
          d="M101.22 76.514c-.104.613-.585 1.044-1.076.96-.49-.082-.805-.646-.702-1.26.104-.613.585-1.044 1.076-.961.491.083.805.647.702 1.26M94.26 75.074c-.104.613-.585 1.044-1.076.96-.49-.082-.805-.646-.702-1.26.104-.613.585-1.044 1.076-.96.491.082.805.646.702 1.26"
          fill="#552950"
        />
        <path
          d="M99.206 73.644l-.9 1.62-.3 4.38h-2.24"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.063"
        />
        <path
          d="M99.926 73.284s1.8-.72 2.52.54"
          stroke="#5C2552"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.117"
        />
        <path
          d="M81.367 73.084s.48-1.12 1.12-.72c.64.4 1.28 1.44.56 2s.16 1.68.16 1.68"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.117"
        />
        <path
          d="M92.326 71.724s1.84 1.12 4.16.96"
          stroke="#5C2552"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.117"
        />
        <path
          d="M92.726 80.604s2.24 1.2 4.4 1.2M93.686 83.164s.96.4 1.52.32M83.687 80.044s1.786 6.547 9.262 7.954"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.063"
        />
        <path
          d="M95.548 91.663s-1.068 2.821-8.298 2.105c-7.23-.717-10.29-5.044-10.29-5.044"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.136"
        />
        <path
          d="M78.126 87.478s6.526 4.972 16.47 2.486c0 0 9.577 1.02 11.536 5.322 5.36 11.77.543 36.835 0 39.962 3.496 4.055-.466 8.483-.466 8.483-15.624-3.548-35.81-.6-35.81-.6-4.849-3.546-1.223-9.044-1.223-9.044L62.38 110.32c-2.485-15.227.833-19.803 3.549-20.743 3.03-1.049 8.04-1.282 8.04-1.282.496-.058 1.08-.076 1.37-.233 2.36-1.282 2.787-.583 2.787-.583"
          fill="#FFF"
        />
        <path
          d="M65.828 89.81s-6.875.465-7.59 8.156c-.466 8.857 3.03 10.954 3.03 10.954s6.075 22.102 16.796 22.957c8.39-2.176 4.758-6.702 4.661-11.42-.233-11.304-7.108-16.897-7.108-16.897s-4.212-13.75-9.789-13.75"
          fill="#FFC6A0"
        />
        <path
          d="M71.716 124.225s.855 11.264 9.828 6.486c4.765-2.536 7.581-13.828 9.789-22.568 1.456-5.768 2.58-12.197 2.58-12.197l-4.973-1.709s-2.408 5.516-7.769 12.275c-4.335 5.467-9.144 11.11-9.455 17.713"
          fill="#FFC6A0"
        />
        <path
          d="M108.463 105.191s1.747 2.724-2.331 30.535c2.376 2.216 1.053 6.012-.233 7.51"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M123.262 131.527s-.427 2.732-11.77 1.981c-15.187-1.006-25.326-3.25-25.326-3.25l.933-5.8s.723.215 9.71-.068c11.887-.373 18.714-6.07 24.964-1.022 4.039 3.263 1.489 8.16 1.489 8.16"
          fill="#FFC6A0"
        />
        <path
          d="M70.24 90.974s-5.593-4.739-11.054 2.68c-3.318 7.223.517 15.284 2.664 19.578-.31 3.729 2.33 4.311 2.33 4.311s.108.895 1.516 2.68c4.078-7.03 6.72-9.166 13.711-12.546-.328-.656-1.877-3.265-1.825-3.767.175-1.69-1.282-2.623-1.282-2.623s-.286-.156-1.165-2.738c-.788-2.313-2.036-5.177-4.895-7.575"
          fill="#FFF"
        />
        <path
          d="M90.232 288.027s4.855 2.308 8.313 1.155c3.188-1.063 5.12.755 8.002 1.331 2.881.577 7.769 1.243 13.207-1.424-.117-6.228-7.786-4.499-13.518-7.588-2.895-1.56-4.276-5.336-4.066-9.944H91.544s-1.573 11.89-1.312 16.47"
          fill="#CBD1D1"
        />
        <path
          d="M90.207 287.833s2.745 1.437 7.639.738c3.456-.494 3.223.66 7.418 1.282 4.195.621 13.092-.194 14.334-1.126.466 1.242-.388 2.33-.388 2.33s-1.709.682-5.438.932c-2.295.154-8.098.276-10.14-.621-2.02-1.554-4.894-1.515-6.06-.234-4.427 1.075-7.184-.31-7.184-.31l-.181-2.991z"
          fill="#2B0849"
        />
        <path
          d="M98.429 272.257h3.496s-.117 7.574 5.127 9.671c-5.244.7-9.672-2.602-8.623-9.671"
          fill="#A4AABA"
        />
        <path
          d="M44.425 272.046s-2.208 7.774-4.702 12.899c-1.884 3.874-4.428 7.854 5.729 7.854 6.97 0 9.385-.503 7.782-6.917-1.604-6.415.279-13.836.279-13.836h-9.088z"
          fill="#CBD1D1"
        />
        <path
          d="M38.066 290.277s2.198 1.225 6.954 1.225c6.376 0 8.646-1.73 8.646-1.73s.63 1.168-.649 2.27c-1.04.897-3.77 1.668-7.745 1.621-4.347-.05-6.115-.593-7.062-1.224-.864-.577-.72-1.657-.144-2.162"
          fill="#2B0849"
        />
        <path
          d="M45.344 274.041s.035 1.592-.329 3.07c-.365 1.49-1.13 3.255-1.184 4.34-.061 1.206 4.755 1.657 5.403.036.65-1.622 1.357-6.737 2.006-7.602.648-.865-5.14-2.222-5.896.156"
          fill="#A4AABA"
        />
        <path
          d="M89.476 277.57l13.899.095s1.349-56.643 1.925-66.909c.576-10.267 3.923-45.052 1.042-65.585l-13.037-.669-23.737.81s-.452 4.12-1.243 10.365c-.065.515-.708.874-.777 1.417-.078.608.439 1.407.332 2.044-2.455 14.627-5.797 32.736-8.256 46.837-.121.693-1.282 1.048-1.515 2.796-.042.314.22 1.584.116 1.865-7.14 19.473-12.202 52.601-15.66 67.19l15.176-.015s2.282-10.145 4.185-18.871c2.922-13.389 24.012-88.32 24.012-88.32l3.133-.954-.158 48.568s-.233 1.282.35 2.098c.583.815-.581 1.167-.408 2.331l.408 1.864s-.466 7.458-.932 12.352c-.467 4.895 1.145 40.69 1.145 40.69"
          fill="#7BB2F9"
        />
        <path
          d="M64.57 218.881c1.197.099 4.195-2.097 7.225-5.127M96.024 222.534s2.881-1.152 6.34-4.034"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M96.973 219.373s2.882-1.153 6.34-4.034"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.032"
        />
        <path
          d="M63.172 222.144s2.724-.614 6.759-3.496M74.903 146.166c-.281 3.226.31 8.856-4.506 9.478M93.182 144.344s.115 14.557-1.344 15.65c-2.305 1.73-3.107 2.02-3.107 2.02M89.197 144.923s.269 13.144-1.01 25.088M83.525 170.71s6.81-1.051 9.116-1.051M46.026 270.045l-.892 4.538M46.937 263.289l-.815 4.157M62.725 202.503c-.33 1.618-.102 1.904-.449 3.438 0 0-2.756 1.903-2.29 3.923.466 2.02-.31 3.424-4.505 17.252-1.762 5.807-4.233 18.922-6.165 28.278-.03.144-.521 2.646-1.14 5.8M64.158 194.136c-.295 1.658-.6 3.31-.917 4.938M71.33 146.787l-1.244 10.877s-1.14.155-.519 2.33c.117 1.399-2.778 16.39-5.382 31.615M44.242 273.727H58.07"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M106.18 142.117c-3.028-.489-18.825-2.744-36.219.2a.625.625 0 0 0-.518.644c.063 1.307.044 2.343.015 2.995a.617.617 0 0 0 .716.636c3.303-.534 17.037-2.412 35.664-.266.347.04.66-.214.692-.56.124-1.347.16-2.425.17-3.029a.616.616 0 0 0-.52-.62"
          fill="#192064"
        />
        <path
          d="M96.398 145.264l.003-5.102a.843.843 0 0 0-.809-.847 114.104 114.104 0 0 0-8.141-.014.85.85 0 0 0-.82.847l-.003 5.097c0 .476.388.857.864.845 2.478-.064 5.166-.067 8.03.017a.848.848 0 0 0 .876-.843"
          fill="#FFF"
        />
        <path
          d="M95.239 144.296l.002-3.195a.667.667 0 0 0-.643-.672c-1.9-.061-3.941-.073-6.094-.01a.675.675 0 0 0-.654.672l-.002 3.192c0 .376.305.677.68.669 1.859-.042 3.874-.043 6.02.012.376.01.69-.291.691-.668"
          fill="#192064"
        />
        <path
          d="M90.102 273.522h12.819M91.216 269.761c.006 3.519-.072 5.55 0 6.292M90.923 263.474c-.009 1.599-.016 2.558-.016 4.505M90.44 170.404l.932 46.38s.7 1.631-.233 2.796c-.932 1.166 2.564.7.932 2.33-1.63 1.633.933 1.166 0 3.497-.618 1.546-1.031 21.921-1.138 36.513"
          stroke="#648BD8"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M73.736 98.665l2.214 4.312s2.098.816 1.865 2.68l.816 2.214M64.297 116.611c.233-.932 2.176-7.147 12.585-10.488M77.598 90.042s7.691 6.137 16.547 2.72"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M91.974 86.954s5.476-.816 7.574-4.545c1.297-.345.72 2.212-.33 3.671-.7.971-1.01 1.554-1.01 1.554s.194.31.155.816c-.053.697-.175.653-.272 1.048-.081.335.108.657 0 1.049-.046.17-.198.5-.382.878-.12.249-.072.687-.2.948-.231.469-1.562 1.87-2.622 2.855-3.826 3.554-5.018 1.644-6.001-.408-.894-1.865-.661-5.127-.874-6.875-.35-2.914-2.622-3.03-1.923-4.429.343-.685 2.87.69 3.263 1.748.757 2.04 2.952 1.807 2.622 1.69"
          fill="#FFC6A0"
        />
        <path
          d="M99.8 82.429c-.465.077-.35.272-.97 1.243-.622.971-4.817 2.932-6.39 3.224-2.589.48-2.278-1.56-4.254-2.855-1.69-1.107-3.562-.638-1.398 1.398.99.932.932 1.107 1.398 3.205.335 1.506-.64 3.67.7 5.593"
          stroke="#DB836E"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".774"
        />
        <path
          d="M79.543 108.673c-2.1 2.926-4.266 6.175-5.557 8.762"
          stroke="#E59788"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".774"
        />
        <path
          d="M87.72 124.768s-2.098-1.942-5.127-2.719c-3.03-.777-3.574-.155-5.516.078-1.942.233-3.885-.932-3.652.7.233 1.63 5.05 1.01 5.206 2.097.155 1.087-6.37 2.796-8.313 2.175-.777.777.466 1.864 2.02 2.175.233 1.554 2.253 1.554 2.253 1.554s.699 1.01 2.641 1.088c2.486 1.32 8.934-.7 10.954-1.554 2.02-.855-.466-5.594-.466-5.594"
          fill="#FFC6A0"
        />
        <path
          d="M73.425 122.826s.66 1.127 3.167 1.418c2.315.27 2.563.583 2.563.583s-2.545 2.894-9.07 2.272M72.416 129.274s3.826.097 4.933-.718M74.98 130.75s1.961.136 3.36-.505M77.232 131.916s1.748.019 2.914-.505M73.328 122.321s-.595-1.032 1.262-.427c1.671.544 2.833.055 5.128.155 1.389.061 3.067-.297 3.982.15 1.606.784 3.632 2.181 3.632 2.181s10.526 1.204 19.033-1.127M78.864 108.104s-8.39 2.758-13.168 12.12"
          stroke="#E59788"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".774"
        />
        <path
          d="M109.278 112.533s3.38-3.613 7.575-4.662"
          stroke="#E4EBF7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.085"
        />
        <path
          d="M107.375 123.006s9.697-2.745 11.445-.88"
          stroke="#E59788"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width=".774"
        />
        <path
          d="M194.605 83.656l3.971-3.886M187.166 90.933l3.736-3.655M191.752 84.207l-4.462-4.56M198.453 91.057l-4.133-4.225M129.256 163.074l3.718-3.718M122.291 170.039l3.498-3.498M126.561 163.626l-4.27-4.27M132.975 170.039l-3.955-3.955"
          stroke="#BFCDDD"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M190.156 211.779h-1.604a4.023 4.023 0 0 1-4.011-4.011V175.68a4.023 4.023 0 0 1 4.01-4.01h1.605a4.023 4.023 0 0 1 4.011 4.01v32.088a4.023 4.023 0 0 1-4.01 4.01"
          fill="#A3B4C6"
        />
        <path
          d="M237.824 212.977a4.813 4.813 0 0 1-4.813 4.813h-86.636a4.813 4.813 0 0 1 0-9.626h86.636a4.813 4.813 0 0 1 4.813 4.813"
          fill="#A3B4C6"
        />
        <mask
          fill="#fff"
        />
        <path
          d="M154.098 190.096h70.513v-84.617h-70.513z"
          fill="#A3B4C6"
          mask="url(#d)"
        />
        <path
          d="M224.928 190.096H153.78a3.219 3.219 0 0 1-3.208-3.209V167.92a3.219 3.219 0 0 1 3.208-3.21h71.148a3.219 3.219 0 0 1 3.209 3.21v18.967a3.219 3.219 0 0 1-3.21 3.209M224.928 130.832H153.78a3.218 3.218 0 0 1-3.208-3.208v-18.968a3.219 3.219 0 0 1 3.208-3.209h71.148a3.219 3.219 0 0 1 3.209 3.21v18.967a3.218 3.218 0 0 1-3.21 3.208"
          fill="#BFCDDD"
          mask="url(#d)"
        />
        <path
          d="M159.563 120.546a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M166.98 120.546a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M174.397 120.546a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M222.539 120.546h-22.461a.802.802 0 0 1-.802-.802v-3.208c0-.443.359-.803.802-.803h22.46c.444 0 .803.36.803.803v3.208c0 .443-.36.802-.802.802"
          fill="#FFF"
          mask="url(#d)"
        />
        <path
          d="M224.928 160.464H153.78a3.218 3.218 0 0 1-3.208-3.209v-18.967a3.219 3.219 0 0 1 3.208-3.209h71.148a3.219 3.219 0 0 1 3.209 3.209v18.967a3.218 3.218 0 0 1-3.21 3.209"
          fill="#BFCDDD"
          mask="url(#d)"
        />
        <path
          d="M173.455 130.832h49.301M164.984 130.832h6.089M155.952 130.832h6.75M173.837 160.613h49.3M165.365 160.613h6.089M155.57 160.613h6.751"
          mask="url(#d)"
          stroke="#7C90A5"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.124"
        />
        <path
          d="M159.563 151.038a2.407 2.407 0 1 1 0-4.814 2.407 2.407 0 0 1 0 4.814M166.98 151.038a2.407 2.407 0 1 1 0-4.814 2.407 2.407 0 0 1 0 4.814M174.397 151.038a2.407 2.407 0 1 1 .001-4.814 2.407 2.407 0 0 1 0 4.814M222.539 151.038h-22.461a.802.802 0 0 1-.802-.802v-3.209c0-.443.359-.802.802-.802h22.46c.444 0 .803.36.803.802v3.209c0 .443-.36.802-.802.802M159.563 179.987a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M166.98 179.987a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M174.397 179.987a2.407 2.407 0 1 1 0-4.813 2.407 2.407 0 0 1 0 4.813M222.539 179.987h-22.461a.802.802 0 0 1-.802-.802v-3.209c0-.443.359-.802.802-.802h22.46c.444 0 .803.36.803.802v3.209c0 .443-.36.802-.802.802"
          fill="#FFF"
          mask="url(#d)"
        />
        <path
          d="M203.04 221.108h-27.372a2.413 2.413 0 0 1-2.406-2.407v-11.448a2.414 2.414 0 0 1 2.406-2.407h27.372a2.414 2.414 0 0 1 2.407 2.407V218.7a2.413 2.413 0 0 1-2.407 2.407"
          fill="#BFCDDD"
          mask="url(#d)"
        />
        <path
          d="M177.259 207.217v11.52M201.05 207.217v11.52"
          mask="url(#d)"
          stroke="#A3B4C6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.124"
        />
        <path
          d="M162.873 267.894a9.422 9.422 0 0 1-9.422-9.422v-14.82a9.423 9.423 0 0 1 18.845 0v14.82a9.423 9.423 0 0 1-9.423 9.422"
          fill="#5BA02E"
          mask="url(#d)"
        />
        <path
          d="M171.22 267.83a9.422 9.422 0 0 1-9.422-9.423v-3.438a9.423 9.423 0 0 1 18.845 0v3.438a9.423 9.423 0 0 1-9.422 9.423"
          fill="#92C110"
          mask="url(#d)"
        />
        <path
          d="M181.31 293.666h-27.712a3.209 3.209 0 0 1-3.209-3.21V269.79a3.209 3.209 0 0 1 3.209-3.21h27.711a3.209 3.209 0 0 1 3.209 3.21v20.668a3.209 3.209 0 0 1-3.209 3.209"
          fill="#F2D7AD"
          mask="url(#d)"
        />
      </g>
    </svg>
  </div>
  <div
    class="m-design-result-title"
  >
    500
  </div>
  <div
    class="m-design-result-subtitle"
  >
    Sorry, something went wrong.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Back Home
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/customIcon.md correctly 1`] = `
<div
  class="m-design-result m-design-result-info"
>
  <div
    class="m-design-result-icon"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    Great, we have done all the operations!
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/error.md correctly 1`] = `
<div
  class="m-design-result m-design-result-error"
>
  <div
    class="m-design-result-icon"
  >
    <span
      class="anticon result-error-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 40 40"
        width="1em"
      >
        <path
          d="m20.09473,0c-11.09803,0 -20.09472,8.94638 -20.09472,19.98236c0,11.03597 8.99669,19.98236 20.09472,19.98236s20.09472,-8.94638 20.09472,-19.98236c0,-11.03597 -8.99669,-19.98236 -20.09472,-19.98236zm8.61203,26.09696l-2.46303,2.44926l-6.14898,-6.89802l-6.15186,6.89802l-2.46017,-2.44926l6.14898,-6.1146l-6.14898,-6.11746l2.46017,-2.44642l6.15186,6.11746l6.14898,-6.11746l2.46303,2.44642l-6.15186,6.11746l6.15186,6.1146z"
          p-id="1057"
        />
      </svg>
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    Submission Failed
  </div>
  <div
    class="m-design-result-subtitle"
  >
    Please check and modify the following information before resubmitting.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Go Console
      </span>
    </button>
    <button
      class="m-design-btn m-design-btn-default"
      type="button"
    >
      <span>
        Buy Again
      </span>
    </button>
  </div>
  <div
    class="m-design-result-content"
  >
    <div
      class="desc"
    >
      <div
        class="m-design-typography"
      >
        <span
          class="m-design-typography"
          style="font-size:16px"
        >
          <strong>
            The content you submitted has the following error:
          </strong>
        </span>
      </div>
      <div
        class="m-design-typography"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle site-result-demo-error-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
         Your account has been frozen. 
        <a>
          Thaw immediately &gt;
        </a>
      </div>
      <div
        class="m-design-typography"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle site-result-demo-error-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
         Your account is not yet eligible to apply. 
        <a>
          Apply Unlock &gt;
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/result/demo/info.md correctly 1`] = `
<div
  class="m-design-result m-design-result-info"
>
  <div
    class="m-design-result-icon"
  >
    <span
      class="anticon result-info-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          id="V1.1"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(1111.500000, 454.500000) scale(1, -1) translate(-1111.500000, -454.500000) translate(-498.000000, -587.000000)"
          >
            <g
              transform="translate(518.000000, 1476.000000) scale(1, -1) translate(-518.000000, -1476.000000) translate(498.000000, 1456.000000)"
            >
              <path
                d="M20,40 C31.0457778,40 40,31.0457778 40,20 C40,8.95431111 31.0457778,0 20,0 C8.95431111,0 0,8.95431111 0,20 C0,31.0457778 8.95431111,40 20,40 Z"
                fill="currentColor"
                fill-rule="nonzero"
              />
              <path
                d="M21.1304348,25 C21.6106783,25 22,25.3893217 22,25.8695652 L22,28.1304348 C22,28.6106783 21.6106783,29 21.1304348,29 L18.8695652,29 C18.3893183,29 18,28.6106783 18,28.1304348 L18,25.8695652 C18,25.3893217 18.3893183,25 18.8695652,25 L21.1304348,25 Z M21.1304348,11 C21.6106783,11 22,11.4291077 22,11.9584374 L22,22.0415626 C22,22.5708884 21.6106783,23 21.1304348,23 L18.8695652,23 C18.3893183,23 18,22.5708884 18,22.0415626 L18,11.9584374 C18,11.4291077 18.3893183,11 18.8695652,11 L21.1304348,11 Z"
                fill="#FFFFFF"
                transform="translate(20.000000, 20.000000) scale(1, -1) translate(-20.000000, -20.000000) "
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    Your operation has been executed
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Go Console
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/loading.md correctly 1`] = `
<div
  class="m-design-result m-design-result-loading"
>
  <div
    class="m-design-result-icon"
  >
    <span
      class="anticon result-loading-icon"
      role="img"
    >
      <img
        alt="loading"
        class="anticon-spin"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAAAXNSR0IArs4c6QAAGKxJREFUeF7dXWuQXVWVXmvvc+6zk86TJJCE250gEpUpzOCzBMoflFPM+BpjjegPYUbUIkl3J0g5v0J+TKkIdAcGEX9MOY6MU1JO6Vg6TuGIOFI6DogDkzBAku5AAoRHXv24fc/Ze6+ptfY+595+pW8nnddcCy597nl+51vf+tbaZx8RzuFn/RZaaHTarUBd4sitRtSXAKVLCVQZEaqAVAGnARDGgWAcAOoO6JhC9ZJCOkjgXnI0undoYPGxc3UZeDYPvGEHFcZPpFc6Um9XhFc6oEsBQAERAiICARJaxYuQ/wUOgQRABCDFXw5Ih5P22ykFQDAI4J7SiE9id/TE3q3YOFvXdcYBJCK8bGtyhVGFDwC49xCZDgEIGSD5KCCHoDQDgQRWTwcgkdMMK685AcAceFKMtAJmqvqFRvuzF/rjpxCRziSYZwzAjbdQfLQDrgHj/syBXQGoAYCQKACETph2SgDmjCU+fwGO0AMozJXfZfevKAcPlRbpH+/ZicmZAHLeAeQwHTthPkgObwAFi9A4zYHpAWSGZcDxBfMlg57IwAwIjt1mCE9lIE4IfZQbgkDE24XjISFZUqjwDYX4XdepfzC0E1lL5+0zrwCu35JcZbX+jHO0HJCDTYEA6ImGAggqJGLccq2bO4CeYaKZrI3CPGEgeAD5hoHXTiIPrGemexW0unOoP35svhCcFwDfeistHdfpZwDoKlARaw5rmZIwsp6BfImeGfzN5Jmkdah9EmkFVhgYByBMpoG8og9RkYQsy3ggfUgThpzjAeSjB73gG4ngflXC6KvPDuArpwvkaQO4bmuy0QDchKgqcjICkGgTqzeCs1ougDhztITyvAAoDMvStAfOo8XpWoAjYahAG37nCOdIwFGFtGP/QPzz0wHxlAG8bgdFQ8ftJgL4oJwgn3AIUQkt+R8CMYDMDQZQQi/yWkjGZ1sMWsbEkOU5M70GOi17Yu0MWThjYGBsHqIish5AEgCF7yHEc7sk2d6hB1ZU5nvlhc/dtWfn208pyZwSgFfeRtUTqdlMgOtE6xgIAVBu9URbwkCxg7Og/Bps48gnE0LmqxLA5wVAZqCXvAnMbM3amYSIVPC9EYb+AXD01lMx5HMG8B1fpsXDY8lWQL1Ksl7QLJDs2hIqGdOmaKH44Dwbi1OWkAoaiDMwEIMP5DvQNNC8nyyEffbNAHSsvS3ax0mHGe1tJAJ5AL1mivLsp1j/1dDX8dW5hPScAOzqoRVEpgeAFme+zt9tPhPTUkHwGXmmTdVCjsRmNsZgnIGzggADivfHsSsXmoXwyQDk9VkKJHSZ02xnMmD5BvF+fXLzN5rl0N9wyG2P4hR2OAZ78wsD5f3tgtg2gGu/fGwx1qvbAHAJM4bV2vu32MsLpBOMcR6afOcnaKEKIe6Z4DVPCpMQyp5CQBRN0MDJAGY2Bj1QcgNOpn15xdJiazLNzHwjOM7qrwGmnzwwUG0rQ7cFIGvecJL0OsSVQKLlgNkdDBVGk4n+DguD/J33JVquhYGBqhVAxRI4AmRfIsSXlVKvgTPjCFQHiHg3FQdQVWhWOdJrgaAbAJYIcBh8ny+VZ9a+UJr4WptXZODFFVD4DjfaKFRqL5D+1NAAztqkmBVAybbDsJlM2h0K92wbYZKXGfZrkSdlYKKv8n2oCoCK/ZgCDL6QJQABnyV0/6Ux3b3vnspL7YYNr1frpZoiu5HAXUcAG0FcO+MSbJNUONkNbGZdLw3C2OBLOQCEef7Gkwm+UT1VXhTdOFsJOCuA3dvp486aazyLOBZN6IAEJoqmsDjHcidzeyJCE+p7CXUlvlA7a0jBT4vlwqP/+xV8cy6gzbSuaDPajwDAjUSuI6CT1cTeuDezrgc2GHHRapEYBo4BDNoooea+s39XecfJzvGkAHb1NK4kwJvyWpV13lo1PRNDdhNGthhYspHfvmBR0WMYn/jR/q8tOT4fwE3ex9v6aEndJrcQqo8Tsjjzjc2S0qRKRaSnlXlcOeVdM28oyKHW8Rf29ePPZjrfGQF8W9/xJWOusp2AQoXhDzgzE4ORVjH5kqzhjTKBVgBPEMQ/GNyFh88EcJP32b11bC3p4mYiuN4nqczOhErFa98MzMsMvyYvUTgcq+hDz/fjoenOfUYAa33mJiLaAC6UQplBZtEV/+ltPIXfs7YUit/yPg9RGQ300L6B+PGzAdzkY9R6zUcRzB1EGItGMnBsZ6ilrSa1crA1cua+7eYbFaydkr4fGdpVuLltANdvpw2pbdzkbZOIhRitsAM2WWxffNPANrQ/t0wTPRMR9bCO1Tf3fh33nQvwsmOu35ZcZS3cS4DLQpfGM4+ThY8Qb6uEFHxdoSLk5cITlgFhz82Du+JHJl/LFAZufJDiN/fANoJkqTec3q77KBDj1izVJjCR7QF/GE17qEONf3N3f+eRcwleduwrekdX1bF8PxBtyGvtnHmZ9AQ7I8DxZWftNisAIuChlerwtb/pX1NvvaYpAHb1pR8gBzfkvo78DsSOiCJ7IKVmyJnokGwqTESilyMq3LP3vrM3LtHOTdp4B1XePE7/SGTe5mv33AeG7kze8QpJMC9NPUa+LXbH0K7CgzMCyJ7vwLHkdnJuoS99OGkwcFz3m7zOlB2E5oE0MqWhUCRUMNpRgLuf+SoebeeizvY6l28evTjR8Q8JYJnUxPlYDDc3sk44EyYMNXgqhgiUHtlr2sXvaiXHBAbWepJ3AyH7qRCyDIwHMm/FY2Akd5dC80i+lXIFre5/7i4cPNvAzOV467YnG52h7xHo2GsfX0dT63y4MXCcvaWzHSqVABXSl4cGCt/OjpkDyKNntd7GNkC92DPWU9jvXXycL8b5v4WR4rHCKqx89P3B/sLv5nIx52rdrh6ziRDuDkCFGt5fFwQNFE/ouzsewNCYBYAXBweiq7PRvhzAS2+rd0ECfym1awt1OY9PZCQDyYz0WYzHNhSopwd3Fb5zrgA5lePWeswDgHhD3pXxYyYhfH0rNnwy6mXaiBHCRzNr1gRwa+NjAOqqfLQ2Ay5LGqHf12RkKbSHDBWi6O7n78Y3TuVCztU2l99W70qM+iU5VfAEmZ5xMizhQy9Et5jrhwYHClv9cgDgMdwjRfclUq5Ivm4FqXmF0mEcO7cxGSNDg1JFvxnqxx+dKyBO57i1nvpXgKLPhsGujHBNv5tpo4wSMCsD1IjDK0Ff8Zt+rMuirp7xywnxU34PHMJNAAVQgTp8B0BljEJBUuks3LVnJ46czoWcq23XbxlebqLqb4Go6huwol3B93kDneWUPBuHBVrhjfsGon8VcGpb0w85gHezorE7UeK+MxvDjOSkYkITIegEKq4mHz3dUa1zBV523FqvvR0AtxO3+KWZ4JnWzMaBd1LeSRdHSkFAfGBoV/zXAuC6nuTzjvAiD5QLgz/8C4Plk4ZPGC2hzVCXonv2fw3PSGflbAH7lj66JCXzB8qyL7fsciZmKheAkwH78CF6dmhX/F5kh/7GEbM9X55Fer4guwOemQ4iEoYSDQ3dF+V+6Gxd8Jk4Tldf+kNycE0mgoFhnmnZ5U/GBRBLFd2Fl/VSd+KM6J+EcDaykWXhDHD+RVwLV9bSLPjpheL7ZgO9q8d8jgjv9AUq932zbkyzB8A+uXU/nJUV2Y9gd09ytSW6Pv8xe+gsBzAsaNbAsqNCJXpg71fw9dlO7kL4vba98Vaw0W995OZABSUM9cO0ANJt2NVH15OFdwIE25IBmId6XnF4hhK3Imls/65C/4UATrvnWOtJBglgeVY1eFPdjOCW/WTGmn9+EGt95i/AUg2QG40O+aGmCZ/MxshCNusJj6cdGNxV/m67J3chrFfrSX9CANc2a9vM9U0M3RY7w729R7F7S3KzA1ru6WsRkFvy3rr4zyRKSnXsnhraFf/bhQBMu+fYtTXhpuvnspzR3G6C9E1m127s3pp8wQEuzH/JtG8ybq0iqe1jQ/cUvGb8P/l09aTbiehv5gIgIhzAS3uSzUBYahsHecKPHhkaKPyh7W0ugBVrveYWALhvyqlOSh6Tfj+Cl25Nt00Tp9Ncsg0RrYG0++mLdxf3XAC4tH2K3T3mRgKYq69NsbYl6SV+MGfSB7lkmeFDaH52YKD4bNtndwGs2N1rPm0BWlpysz/cjwAp1nqTLwLB1BCWZ0am/yCpXwzuwqcvAFzaPsXuPvsFB3B/c4O2ADyC3VvoZgeumUQghGrroRlMSn0hzTWwto/v768+0fbZXQAr1nrpdgD62txOFYewa7P5DAEubW44DYD8Y85ICxrxmX33xo/O7WDn99q1bfQNIPriXM4SEZ/B2nb6qLNuDRe5E0jXApgs578dpxsL6OjQ0EDxh3M52Pm+bq2P/h2A5Hnvdj+I+AjWetPrnFPvmBnA1O8vSyrO8QhS/cBA4e/aPdCFsF7XNjpMRBfN5VwR8W+Rn8ByhB/IN5zEPMz+dl7/Qs8Gqnrk++fLkwdzuejp1uVHWYyj3XPdDwJuwXXbaI0xjQ83AfRAIZd0HNbyMJEiMDKGGkAE0LF5fN9dxf+Z60HPx/W7+mgzAU010bOcLCq8Ht/bR+VXyH0WJjEs39alEr6WUu4BymOWEtGEhw7cV/rJ+QjIXM/pVPSPESgouMgPKm2jTWTc0laGNQH0yUWeDBTk/DfP4qua0j/t+caFOaCUXR+39BOg3QRQDJ2WyA/ChZkrM9wNBHx6sB//yI+JbEvfZxN7JQPoROfkISv5D35opBU4nvEsy1FRpNx/7x0o/H6ud/x8Wr/7NnODI/wEWOwmhIpCWA0ARUfQ2ZxfN80ZIw4M3YN9flSut14DF0tXOgcwZ1oGoPXaSEUnyUQpUlqnKxz8M4+Pnk+gtHsu6++lohtyt1rnlqCOLgOCDiDXDSDNlaVEwGyUaRjk5L/9dElxdfjhwbvwxwKgPIl/1H6aAOIsRPNv6xmJOnaSVPwTs2RpVDRRa/3shTo2UvsslVwZLqYYKs7ZKxTCAlT6MkCoaoS1/M4GB7iKS11Et4on+jkHBSUD67AyH1gXHexJr3GEb2kC6CQLo4vlGc6AIoHNNNGJsUatbKmg/+W5O3G43Tt/3qy3g9Tqg7AICUrUaS4jwo6C090EUKUIuhVCxVpaCyChfTERFRFVGQH+YbAfP+9TQvhc2ju6CiD+E5RszBrIzYQm44DGZVKKj1//OJsH1ZK29sX991Z+fd4A086J7CAFewDhdUAYBqz9KehRgKjzCKwghHISw3ok6EDragSuiipaDUBlAFgZKezZdzc+OQFAHrbr3p58gpyuiveT9r7OGSdTbzmI0ZHYQ843rIkc2jwtmtLfzWWOWTvXeMbW2cSTtMPn4RBdPN90B6n1R2ApWSilVVhLBqqabA0UVsjAGlBQVgri/XerW6Y83ibJhIf3ksJ7/DSPiYzL/Z/Skmcw4seILYAr8CAAOVt3pWL50fP9Ka0dO0g9dATiva8G4DYE27En/N3CyJH6G3FpZNkKAS62NXK6UkJ47oUBzLvxE0ZMNn2f9BO/tn9OAPzimwmMywHUfEDOxiVhHlCSh7YGaCxZrH/+5B04dsbYcxo7ZvD+/gAUogVAe58BhDIQvCt0UTIAH858HBJsIt118egyJFU0qrxGE+g/fj88/vAnMe+8TBlyWruFNgDajblhRrYvwUAz81TBCfP4H2aesjxSzGN/ookRqqNrOqNf/XInmtO41nnflCXqkp1QhpcBVBUoOgokQC4JzHslfB8NAG4Ifz8GijVy/ftAFZYATZ47NwVAtjSDR+yHSUFFtA5Tn0xULDPlwHE5x9roZ8g7YSRjyX7HAmKHjSI4ttzCf54v/pCZ983Rw2U3tgJj48+3kIATAIcBYQEQNAJwkwHcmWtk9lTWhFb1tIOe62+n1Wlqr5lO66ypS8hipIXGXNIJkqR5Sg6BYbCBUKt6BaIndvfjOZ0rwoQ4CFB58xVALAJp64HyQL4ChWRVAHIIYUGtCeTzAbjl4VtCe+pbkGYcNa71pdeSM5egClpngtZlpZ0KzKPE+0Xs4MeOhJlssDm9IBkXl4pP770TD857TLaxw9oOKrkGlNU4EE/8xTGgKPKalzFRHT0oBDhYXU3CRE4ui4FgCoBN3Ws99IwA8iTrkdR+yJGvTnLmYcEzL4Sur43ZcMvz7eSIHM8x4XkRAAZQF/mXV5cugufPVnIR1h2BysgIFHVl2OE4UbRgoVNFoGNjnlETmQhQWAUuWgq09/chpLMszWA+yBcy/Tu4TvbcAnAom4Z9v2hdS6h6AIPmQdln43RMJvI51BYM/27Y7hCyIfeTIyyCO1TtLOybbRJzG+SadhV2EU/9B1StgvJYA3iKIWk37EN22QLLTDzSAJyWiVUP7MGj4JnYzNIp7MTQYZl62JMCyKtf2pu8k0ity7swU5inhXnWGUKM8mwsGumADDWQ2YlKS1bWOkqKRXhpvAivztd7rJhxL45DNUmgA9MxUhHQWFIRACVkhyXzOgaQWTgdE9XwYQGw3L3CMhPN7wGXFsA++S0MYxrT39ZZAeQM9u3j5jqyuGR65iU8w5F8ZezndwrzCmK4BVhZzgzk5AKRM/6FTg40HHdm7PVlY5XjT35rbt5R3kU4DmU3LJ612OBplRpI0Zicx7irOAZQOeCJDPINJwCi1R7II4ePIRaIomixSFIGYLxshWxfMuBeuBeS2V6fNyuAvDM+2fqIudZZXNDUvEnMy5jJwBgDGMsoHlnXIGRN5NBmKTEZgMZZZqyKBFhnIEUFY7oIo86NJgVXNcUY7PHjx6GilHIlwIbVcaoqkU6hwI8CYCrThwS48bTutS0B3i3pACCHsiznUGYmriSnxolUsXMGJgLpMtChB6E+G3iBMO0pzsZbXq68UVlyLUKx6DVvEvMYQGsAdOTQcdvfj6c48YfMQG2NAooTmYHCkyV8MmIALfDsXQFcYWoBUlCqIsCm9VGe1ibrM1ApFRwaIMUudZwlwS8fH+c/iBhA3m+kypYZODrqy85MC1WVAhMXChOPHgWYbG8+twrGd55E99rKwtPBevnttKDRgPcB2ZJFI8yCLEQp8kDpELrQYC4G5uVTt7kRwRMKKOYtpZkj/QkyhQxABmBmABk8tERpqWj5EFox4zyAEsKq5EOSxhxrIQYtrHMIjwDoCggTdfW4U0UiOLYIOMSPsTaWgW4tw2i74M2JgRmgPAj1GsF7U7RVWcYAStYN2qeKknU5dDPmSehC5Bi4yBqyuc1JAW0cADQELgrMnAVATZSqAKAwcRwaDKyW14Y41OVcC1tD2Wdlr9Waxeg4gCSVMaATi8DNFbxTAjDTxJHj5mogXOz9XpN5QA15U6zLKpWsf5glj8RIuGbbKYx8ti7wBFBenrrpGViQUPUMBErjhmMGqnJRGCjLNVCj7s9HuboDGINILZVQHklfR4wrpBwFJpIwMV6ywFY6wWwCGJsL8zJCtZVEpgtnzs7fPZpsMKDXSqiGpIEhpG1eI8vkJ0IXifbFxvjQFeBTUFgOAKbE3e+TAQiQgGIN1ECJGSY0BVKLi6KFeTIZBmJAPYCcPLhvOQZjUVlsDTZGCOMq+eUAK5cvqD+xo72EMR0OpwxgtrPal2glJo138AiTz7rWm+dWW8MhnAEIIfsKM1NAKovdMYW6gKwwFg1EiKW2zpMI70+xTfEApvx3AwAXNhyHsNadLcmkRIo8gIpfYdmihWONEZGWSHfYsoKR0301wWkDyCfDuvg6pVcYwuVZy98D2KJ9xoDBTOOCX2RmWk5EnJZSx1p6UgDlTaw+lBMOWf5HAORsXAwAMu0Y6CaAnoneF46OjkKlI21cfWjR8MMPT1/ftudL/FrzAmB2wHW3DV+UJqW3yChWHsKRL/WM4fdgNLOv8tk2A9AUTGBgWA6VqQzkEMYOAaqRDAOHMHZ4JmrltTDLxpxMvBbyjRwDXSq7uFwxpjA0PLSza97e5DuvAPIJS1f7sfHVWIrWWII4D11nqKl98rI6fhUUARdKwkA24PIqiBDC0wHYZGAjaYAwsAVAfgd3lo0hrRNGJalAWO+q0ejw7vuX81js7I+ezoGC8w5gdmxOMt87UV+VmGiNASzGDGBuX8TcOgYw5UdvOAlVwTKYKiQXzBmYEOgCKUqyJyWEmYkt+BDuCNm4QM5n45JkY65MolLZLBiBE7vvh3kH7rSzcLs3iVvpXX3QqVTjImv0MuKA5tCNYieGOCQYLPgKYk4AsoYWAoALKWhhycYAo0kHjAzeAY35Ztzk6z5jDJwO4E2bSO9ZDZ0jerxTpaUFPHhlmHbMwAjcBAZSxWdblRC/MURBCwM5ifD/3YAlUjG42FISl0qjJTxc/1h1Rf1U/Fy7hDinAE4+uLxvfzFU3PBoGVEXIcKSdahjTBS5Dnk3JQOoVMFG1DDsHZ2ilJRtGGOTJXph4/J3wXjrKNmpAnGq2/0fRQXBSYd0RnsAAAAASUVORK5CYII="
        style="width:1em;height:1em;display:block"
      />
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    Great, we have done all the operations!
  </div>
</div>
`;

exports[`renders ./components/result/demo/success.md correctly 1`] = `
<div
  class="m-design-result m-design-result-success"
>
  <div
    class="m-design-result-icon"
  >
    <span
      class="anticon result-success-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          id="V1.1"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(1111.500000, 752.500000) scale(1, -1) translate(-1111.500000, -752.500000) translate(-498.000000, -289.000000)"
          >
            <g
              transform="translate(518.000000, 1774.000000) scale(1, -1) translate(-518.000000, -1774.000000) translate(498.000000, 1754.000000)"
            >
              <path
                d="M20,0 C31.0457333,0 40,8.95432 40,20 C40,31.0457333 31.0457333,40 20,40 C8.95432,40 0,31.0457333 0,20 C0,8.95432 8.95432,0 20,0 Z"
                fill="currentColor"
              />
              <path
                d="M26.5366316,13.8097584 L27.4730819,14.5955335 C27.9904786,15.0292464 28.0579436,15.8003155 27.6239738,16.3175006 C27.6239023,16.3175858 27.6238308,16.317671 27.6234971,16.3175362 L19.4477865,26.055586 C19.013568,26.5722688 18.2426353,26.6396548 17.7253105,26.2060465 L15.85241,24.6344963 L24.8141502,13.9602142 C25.2484326,13.4434605 26.0193276,13.3761233 26.5366316,13.8097584 Z"
                fill="#FFFFFF"
              />
              <path
                d="M12.7149336,20.270914 L13.5351537,19.3599672 C13.9797825,18.866157 14.7374338,18.8179501 15.2410672,19.2514208 L20.9910334,24.2003922 L19.42662,26.082779 C18.9950922,26.6020123 18.224357,26.6731176 17.7051256,26.2415948 C17.698719,26.2362687 17.692368,26.2308809 17.6860743,26.2254294 L12.8229994,22.0128767 C12.312697,21.5708363 12.2573594,20.7988049 12.699403,20.2884987 C12.7045248,20.282586 12.7097026,20.2767236 12.7149336,20.270914 Z"
                fill="#FFFFFF"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    Successfully Purchased Cloud Server ECS!
  </div>
  <div
    class="m-design-result-subtitle"
  >
    Order number: 2017182818828182881 Cloud server configuration takes 1-5 minutes, please wait.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Go Console
      </span>
    </button>
    <button
      class="m-design-btn m-design-btn-default"
      type="button"
    >
      <span>
        Buy Again
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/result/demo/warning.md correctly 1`] = `
<div
  class="m-design-result m-design-result-warning"
>
  <div
    class="m-design-result-icon"
  >
    <span
      class="anticon result-warning-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          transform="rotate(-180 20 20)"
        >
          <g
            transform="translate(1111.500000, 454.500000) scale(1, -1) translate(-1111.500000, -454.500000) translate(-498.000000, -587.000000)"
          >
            <g
              transform="translate(518.000000, 1476.000000) scale(1, -1) translate(-518.000000, -1476.000000) translate(498.000000, 1456.000000)"
            >
              <path
                d="m20,40c11.04578,0 20,-8.95422 20,-20c0,-11.04569 -8.95422,-20 -20,-20c-11.04569,0 -20,8.95431 -20,20c0,11.04578 8.95431,20 20,20z"
                fill="currentColor"
                fill-rule="nonzero"
              />
              <path
                d="m21.13043,15c0.48025,0 0.86957,-0.38932 0.86957,-0.86957l0,-2.26086c0,-0.48025 -0.38932,-0.86957 -0.86957,-0.86957l-2.26086,0c-0.48025,0 -0.86957,0.38932 -0.86957,0.86957l0,2.26086c0,0.48025 0.38932,0.86957 0.86957,0.86957l2.26086,0zm0,14c0.48025,0 0.86957,-0.42911 0.86957,-0.95844l0,-10.08312c0,-0.52933 -0.38932,-0.95844 -0.86957,-0.95844l-2.26086,0c-0.48025,0 -0.86957,0.42911 -0.86957,0.95844l0,10.08312c0,0.52933 0.38932,0.95844 0.86957,0.95844l2.26086,0z"
                fill="#FFFFFF"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </div>
  <div
    class="m-design-result-title"
  >
    There are some problems with your operation.
  </div>
  <div
    class="m-design-result-extra"
  >
    <button
      class="m-design-btn m-design-btn-primary"
      type="button"
    >
      <span>
        Go Console
      </span>
    </button>
  </div>
</div>
`;
